@@ -1,0 +1,2 @@
+{# sidebar only for contents document #}
+<h4>Contents sidebar</h4>
